need to reconsider what info to include in the metabolic genes clustering section

--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -251,7 +251,7 @@ global_super_summary <- readRDS('~/data/NZ_coreExome_1kgp/100kbWindow_intra/filt
 
 ```
 
-> need to reference table \@ref(tab:superGlobalSummary) somewhere in this chapter
+
 
 <!--
 - td had eur cluste, nzm-cim, most of a sas, but the other populations are in groups of 2-3, the pol group is quite disimilar to the rest
@@ -312,7 +312,7 @@ prop_list["fld_neg"] <- NULL
 prop_list["fld_pos"] <- NULL
 prop_list["fld_chr"]<-NULL
 load('~/data/gwas_catalog/diseaseGR-12-3-2018.RData')# brings in objects called {gc_urate_gout,urate_gout,kd,metsyn,obesity,t2d}_GR, 
-load('~/data/NZ_coreExome_1kgp/100kbWindow_intra/gene_clustering_filtered_3ns-31-8-2017.RData')# brings in objects called gout, obesity, t2d, metsyn, kd
+load('~/data/NZ_coreExome_1kgp/100kbWindow_intra/gene_clustering_filtered_3ns-16-4-2018.RData')# brings in objects called gout, obesity, t2d, metsyn, kd
 names(gout) <- c('mat_d','prop')
 gout$mat_d["Fu.Li.D"] <- NULL
 gout$prop["Fu.Li.D"] <- NULL
@@ -360,8 +360,12 @@ bind_rows(list(
   mutate_if(., is.numeric, funs(sprintf('%.2f',.)))%>%
   select(stat, Type, everything()) %>% 
   data.frame %>% 
-  arrange(stat) %>%  
-  data.frame %>% knitr::kable(., caption = "(\\#tab:proportion) Proportion of populations clustered into their corresponding super population.", booktabs = TRUE, escape = FALSE) %>% footnote(general = "Proportions were calculated independently for each super population based on the cluster group with the maximum number of populations from a particular super population.", general_title = "")
+  arrange(stat) %>% select(-stat) %>% 
+  data.frame %>% knitr::kable(., caption = "(\\#tab:proportion) Proportion of populations clustered into their corresponding super population by selection and neutrality statistic.", booktabs = TRUE, escape = FALSE) %>% group_rows("Fu and Li's F", 1, 8) %>% 
+  group_rows("Fay and Wu's H", 9, 16) %>% 
+  group_rows("Tajima's D", 17, 24) %>%
+  group_rows( "Zeng's E",25, 32) %>% 
+  footnote(general = c("Proportions were calculated independently for each super population based on the cluster group with the maximum number of populations from a particular super population."), general_title = "", threeparttable = TRUE)
   #column_spec(1, width = "15em")
   #pander::pandoc.table(., caption = "(\\#tab:proportion) Proportion")# %>% kableExtra::group_rows("Fu and Li's D", 1, 7) %>% kableExtra::group_rows("Fu and Li's F", 8, 14) %>% kableExtra::group_rows("Fay and Wu's H", 15, 21) %>% kableExtra::group_rows("Tajima's D", 22, 28) %>% kableExtra::group_rows("Zeng's E", 29, 35) %>% kableExtra::kable_styling(latex_options = "scale_down")
 
@@ -386,8 +390,13 @@ bind_rows(list(
          Type = sapply(Type, function(x){switch(x, chr = "Chromosome", neg = "Lower Tail", pos ="Upper Tail",x)})) %>%
   mutate_if(., is.numeric, funs(sprintf("%.2f",.))) %>% 
   arrange(stat) %>% 
-  data.frame %>%
-  knitr::kable(., caption = "(\\#tab:exclusivity) Mean exclusivity of clusters for a given super population.", booktabs = TRUE, escape = FALSE) %>% footnote(general = "Exclusivity of each cluster was calculated by using the proportions of populations from a given super population assigned compared to the total number of individual populations assigned that cluster", general_title = "") #%>% kableExtra::group_rows("Fu and Li's D", 1, 7) %>% kableExtra::group_rows("Fu and Li's F", 8, 14) %>% kableExtra::group_rows("Fay and Wu's H", 15, 21) %>% kableExtra::group_rows("Tajima's D", 22, 28) %>% kableExtra::group_rows("Zeng's E", 29, 35) 
+  data.frame %>% select(-stat) %>% 
+  knitr::kable(., caption = "(\\#tab:exclusivity) Mean exclusivity of clusters for a given super population by selection and neutrality statistic.", booktabs = TRUE, escape = FALSE) %>% 
+  group_rows("Fu and Li's F", 1, 8) %>% 
+  group_rows("Fay and Wu's H", 9, 16) %>% 
+  group_rows("Tajima's D", 17, 24) %>%
+  group_rows( "Zeng's E",25, 32) %>% 
+  footnote(general = c("Exclusivity of each cluster was calculated by using the proportions of populations from a given super population assigned compared to the total number of individual populations assigned that cluster"), general_title = "", threeparttable = TRUE) #%>% kableExtra::group_rows("Fu and Li's D", 1, 7) %>% kableExtra::group_rows("Fu and Li's F", 8, 14) %>% kableExtra::group_rows("Fay and Wu's H", 15, 21) %>% kableExtra::group_rows("Tajima's D", 22, 28) %>% kableExtra::group_rows("Zeng's E", 29, 35) 
 ```
 
 
@@ -1488,9 +1497,9 @@ names(kd) <- c('mat_d','prop')
 
 To assess if there was specificity of selection for the metabolic disease gene lists or if the population groupings could be obtained from any list of genes, clustering was performed using the actual statistic values for the genes. These values were median-centred to account for the population specific shifting of distributions which would have accounted for the majority of difference in the distance calculation. Gene lists were chosen for metabolic-related disease and compared to lists of random genes (Section \@ref(randomgenes)) to assess clustering specificity to metabolic disease.
 
-Overall, gene lists derived from \gls{gwas} associations clustered the individual populations into their super population groupings. Windows that intersected genes that had been associated with a disease were centred by population median and then grouped using hierarchical clustering. There were varying levels of super population proportions and exclusivity (the proportion of super populations in a single cluster) of clusters (Table \@ref(tab:proportion) and \@ref(tab:exclusivity)). The Polynesian populations clustered together when using each of \gls{fwh}, \gls{td}, and \gls{ze}, and in the majority of clustering (17/20) they were exclusive. This pattern was also similar with the \gls{eas} populations (17/20). For the clusters that contained the entirety of a super population, half the groupings for the entire Polynesian super population were exclusive. Three quarters of the groupings for each of the AFR and EAS super populations were exclusive and grouped the super population in their entirety. This suggests that singletons or rare variants are insufficient in these genes to be able to differentiate between populations compared to the statistics that use the more common variants. 
 
-Comparing the gene lists by statistic, for all selection statistics and gene lists the populations of the \gls{sas} super population were all clustered together, although often with poor exclusivity. The \gls{eur} super population was clustered entirely together but with a ranging degree of exclusivity across the different selection test statistics. \Gls{td}, \gls{fwh}, and \gls{ze} clustered all the super populations in their entirety although the \gls{amr} populations were split. The clustering of super populations was not specific to the gene lists associated with urate, gout, obesity, \gls{t2d}, kidney disease, or, metabolic syndrome, as the use of random lists of genes would cluster the super populations (excluding \gls{amr}) up to 75% of the time (Table \@ref(tab:randgenes)). This indicates that there is likely nothing specific about the urate and gout, \gls{t2d}, obesity, kidney disease, or metabolic syndrome gene lists in terms of "signatures of selection", but they contain similar discriminatory information as other lists of genes, which is likely to be capturing allele frequency differences between populations. This is seen with the results of the clustering using random genes (Section \@ref(randomgenes)), where the number of genes in a gene list has appears to impact on exclusivity and proportion of populations clustered into their super populations.
+
+<!-- Comparing the gene lists by statistic, for all selection statistics and gene lists the populations of the \gls{sas} super population were all clustered together, although often with poor exclusivity. The \gls{eur} super population was clustered entirely together but with a ranging degree of exclusivity across the different selection test statistics. \Gls{td}, \gls{fwh}, and \gls{ze} clustered all the super populations in their entirety although the \gls{amr} populations were split. The clustering of super populations was not specific to the gene lists associated with urate, gout, obesity, \gls{t2d}, kidney disease, or, metabolic syndrome, as the use of random lists of genes would cluster the super populations (excluding \gls{amr}) up to 75% of the time (Table \@ref(tab:randgenes)). This indicates that there is likely nothing specific about the urate and gout, \gls{t2d}, obesity, kidney disease, or metabolic syndrome gene lists in terms of "signatures of selection", but they contain similar discriminatory information as other lists of genes, which is likely to be capturing allele frequency differences between populations. This is seen with the results of the clustering using random genes (Section \@ref(randomgenes)), where the number of genes in a gene list has appears to impact on exclusivity and proportion of populations clustered into their super populations. -->
 
 
 <!--
@@ -1510,9 +1519,21 @@ Clustering on other diseases such as pd, macular degeneration, alzhimers and col
 -->
 #### Urate and gout
 
-There were `r length(unique(urate_goutGR$SYMBOL))` genes that had an association with urate or gout at a genome-wide significance level. This mapped to `r nrow(gout$mat_d$Tajima.D)` windows for each of the frequency based selection test statistics. \gls{ze} and \gls{fwh} clustered each super population into their own group and each cluster was exclusive to a super population. Both \gls{td} and \gls{flf} grouped most of the super populations correctly and nearly all clusters had good exclusivity for each single super population. \Gls{td}, \gls{fwh}, and \gls{ze} also had an Eastern/Western Polynesian population sub group within the Polynesian group (Figure \@ref(fig:goutdendros)). Unlike the F~ST~ clustering, the \gls{amr} populations were grouped together for \gls{td}, \gls{fwh}, and \gls{ze}. The \gls{eas} and \gls{pol} populations were closest for \gls{flf}, \gls{fwh}, and \gls{ze}, but not for \gls{td}, where the \gls{pol} populations were furthest from the other populations.
+There were `r length(unique(gc_urate_gout_GR$SYMBOL))` loci that had an association with urate or gout at a genome-wide significance level in the \gls{gwas} catalog. This mapped to `r nrow(gout$mat_d$Tajima.D)` windows for each of the frequency based selection test statistics. \gls{ze} and \gls{fwh} clustered each super population into their own group and each cluster was exclusive to a super population. Both \gls{td} and \gls{flf} grouped most of the super populations correctly and nearly all clusters had good exclusivity for each single super population (Tables \@ref(tab:proportion) and \@ref(tab:exclusivity)). \Gls{td}, \gls{fwh}, and \gls{ze} also had an Eastern/Western Polynesian population sub group within the Polynesian group (Figure \@ref(fig:goutdendros)). Unlike the F~ST~ clustering, the \gls{amr} populations were grouped together for \gls{td}, \gls{fwh}, and \gls{ze}. The \gls{eas} and \gls{pol} populations were closest for \gls{td} \gls{flf}, \gls{fwh}, and \gls{ze}.
 
-There were 2 genes; _BCAS3_ and _RREB1_, that had at least one statistic in all of the Polynesian populations that met the threshold of significance in the lower tail. _BCAS3_ met the significance threshold for \gls{fwh} and \gls{flf} in all Polynesian populations and for \gls{td} in all Polynesian populations except \gls{ton}. _INHBC_ and _ATXN2_ both had windows that met the lower tail significance threshold for \gls{ze} in all Polynesians populations, except \gls{sam} for _INHBC_. There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(urate_goutGR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW() %>% num_to_word()` of the urate- and gout-associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. In the upper tail, _VEGFA_ had windows of \gls{ze} values that met the upper tail significance threshold for all Polynesians populations. _BAZ1B_ also met the threshold in the Eastern Polynesian populations. There were no loci that were significant in all Polynesian populations in the upper tail. None of the genes that met the significance threshold are urate transporters which have the strongest genetic effects on urate and gout [@Kottgen2013].
+> what were the similarities at the loci like between populations? and were any loci that were significant also significant in other pops?
+
+> stating the significant windows seems a bit redundant considering the previous subsections for the extreme windows
+
+```{r, eval = FALSE}
+lower_sig_stats %>% filter(SYMBOL %in% unique(gc_urate_gout_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally()  %>% spread(SYMBOL, n) %>% left_join(., panel %>% select(pop, super_pop) %>% distinct(), by = 'pop') %>% arrange(statname, super_pop, pop) %>% View()
+```
+
+In total there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(gc_urate_gout_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW() %>% num_to_word()` of the urate- and gout-associated loci that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations that met the lower tail threshold.  _SLC2A9_ had multiple windows for only \gls{flf} in \gls{ton}, as well as \gls{jpt} and \gls{chb}. Nearly all populations had windows for _BCAS3_, except 
+
+<!-- There were 2 genes; _BCAS3_ and _RREB1_, that had at least one statistic in all of the Polynesian populations that met the threshold of significance in the lower tail. _BCAS3_ met the significance threshold for \gls{fwh} and \gls{flf} in all Polynesian populations and for \gls{td} in all Polynesian populations except \gls{ton}. _INHBC_ and _ATXN2_ both had windows that met the lower tail significance threshold for \gls{ze} in all Polynesians populations, except \gls{sam} for _INHBC_. _SLC2A9_ had multiple windows for only \gls{flf} in \gls{ton}, as well as \gls{jpt} and \gls{chb}. In total there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(gc_urate_gout_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW() %>% num_to_word()` of the urate- and gout-associated loci that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. There were no loci that were significant in all Polynesian populations in the upper tail, for any statistic.  -->
+
+<!-- None of the genes that met the significance threshold are urate transporters which have the strongest genetic effects on urate and gout [@Kottgen2013]. -->
 
 
 ```{markdown, eval = FALSE}
@@ -1605,9 +1626,9 @@ multiplot(gene_dendros(gene_data = gout$mat_d$Tajima.D[,-1:-3]) + ggtitle("Tajim
 #### Obesity
 
 
-The \gls{gwas} catalog had `r length(unique(obesity_GR$SYMBOL))` genes associated with obesity, this was represented by `r nrow(obesity$mat_d$Tajima.D)` windows and the clustering resulted in the groupings of super populations (Figure \@ref(fig:obesitydendros)). Exclusivity of a single super population to a cluster was also high with the notable exception being the \gls{amr} populations of \gls{clm} and \gls{pur} often being part of the \gls{eur} cluster. The Polynesian super population cluster was also closest to \gls{eas} in all selection statistics and also had an Eastern/Western sup-grouping within the \gls{pol} group.
+The \gls{gwas} catalog had `r length(unique(obesity_GR$SYMBOL))` loci associated with obesity, this was represented by `r nrow(obesity$mat_d$Tajima.D)` windows and the clustering resulted in the groupings of super populations (Figure \@ref(fig:obesitydendros)). Exclusivity of a single super population to a cluster was also high with the notable exception being the \gls{amr} populations of \gls{clm} and \gls{pur} often being part of the \gls{eur} cluster. The Polynesian super population cluster was also closest to \gls{eas} in all selection statistics and also had an Eastern/Western sup-grouping within the \gls{pol} group.
 
-There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` of the obesity-associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. In the lower tail there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` loci with at least one window that was significant in the Polynesian populations. _ADAMTSL3_, _AGBL4_, _ARL15_, _CCR3_, _CREB1_, _ERBB4_, _FER_, _FHIT_, _GRID1_, _LTBP1_, _MAP2K5_, and _ZBTB38_ each had in all Polynesian populations, at least one statistic that met the significance threshold in the lower tail. Only _DNAH10_ had a significant window for each of \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}, and this was only in the \gls{nzm} population. The upper tail had a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% NROW()` loci that had at least a window that was significant in the Polynesian populations. _ADCY3_, _CHST8_, _CMIP_, _ERBB4_, _FHIT_, _FTO_, _GRID1_, _HMGA2_, _LTBP1_, _NEGR1_, _NRXN3_, _NT5C2_, _PARK2_, _PRKCH_, _RARB_, and  _TCF7L2_ each had in all Polynesian populations, at least one statistic that met the significance threshold in the upper tail.
+<!-- There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` of the obesity-associated loci that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. In the lower tail there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` loci with at least one window that was significant in the Polynesian populations. _ADAMTSL3_, _AGBL4_, _ARL15_, _CCR3_, _CREB1_, _ERBB4_, _FER_, _FHIT_, _GRID1_, _LTBP1_, _MAP2K5_, and _ZBTB38_ each had in all Polynesian populations, at least one statistic that met the significance threshold in the lower tail. Only _DNAH10_ had a significant window for each of \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}, and this was only in the \gls{nzm} population. The upper tail had a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(obesity_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% NROW()` loci that had at least a window that was significant in the Polynesian populations. _ADCY3_, _CHST8_, _CMIP_, _ERBB4_, _FHIT_, _FTO_, _GRID1_, _HMGA2_, _LTBP1_, _NEGR1_, _NRXN3_, _NT5C2_, _PARK2_, _PRKCH_, _RARB_, and  _TCF7L2_ each had in all Polynesian populations, at least one statistic that met the significance threshold in the upper tail. -->
 
 > _How could this be summarised?_
 
@@ -2067,7 +2088,7 @@ bind_rows(lapply(seq_along(td_random), function(x){td_random[[x]]$pop_clust_prop
 
 #### Random genes {#randomgenes}
 
-In order to assess whether the clustering from gene lists was specific to the disease associated genes used, lists of random genes were created by selecting genes from a list containing all annotated genes, and then clustered. Random gene lists were generated with either 25 or 100 randomly selected genes, 100 times each. Hierarchical clustering was then performed on the the median centred statistic value based on the population, for windows that intersected genes from the random gene lists for \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}. The number of times the Polynesian super population was completely clustered ranged from 5 to 78 (Table \@ref(tab:randgenes)). The Polynesian super population was completely clustered more often with the lists of 100 genes for \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze} compared to the lists of 25 genes. The number of times all populations were clustered completely was less than 10%. However, if the \gls{amr} super population was not included then it became 56 for the 100 genes, and 36.3 for the 25 genes. \gls{flf} did not perform well at clustering the Polynesian populations into their super population, and only achieved this less than 13% of the time. Clustering all populations was not achieved by \gls{flf}. The other frequency spectrum statistics clustered the Polynesian populations into their super population for at least 50% of the time and did better with more genes. Clustering of the other super populations was similar to the Polynesian super population when the \gls{amr} populations were not included. This indicates that clustering from disease associated gene lists is not specific to particular genes. This was evident from that fact that if the \gls{amr} populations are excluded, by chance the super populations were correctly clustered at least 50% of the time, and this increased to ~75% when more genes were used. It also indicates that genes are better at clustering the super populations than randomly drawn windows. 
+In order to assess whether the clustering from gene lists was specific to the disease associated genes used, lists of random genes were created by selecting genes from a list containing all annotated genes, and then clustered. Random gene lists were generated with either 25 or 100 randomly selected genes, 100 times each. Hierarchical clustering was then performed on the the median centred statistic value based on the population, for windows that intersected genes from the random gene lists for \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}. The number of times the Polynesian super population was completely clustered ranged from 5 to 78 (Table \@ref(tab:randgenes)). The Polynesian super population was completely clustered more often with the lists of 100 genes for \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze} compared to the lists of 25 genes. The number of times all populations were clustered completely was less than 10%. However, if the \gls{amr} super population was not included then it became 56 for the 100 genes, and 36.3 for the 25 genes. \gls{flf} did not perform well at clustering the Polynesian populations into their super population, and only achieved this less than 13% of the time. Clustering all populations was not achieved by \gls{flf}. The other frequency spectrum statistics clustered the Polynesian populations into their super population for at least 50% of the time and did better with more genes. Clustering of the other super populations was similar to the Polynesian super population when the \gls{amr} populations were not included. This indicates that clustering from disease associated gene lists is not specific to particular genes, but they contain similar discriminatory information as other lists of genes, which is likely to be capturing allele frequency differences between populations. This was evident from that fact that if the \gls{amr} populations are excluded, by chance the super populations were correctly clustered at least 50% of the time, and this increased to ~75% when more genes were used (Table \@ref(tab:randgenes)). It also indicates that genes are better at clustering the super populations than randomly drawn windows. 
 
 
 
@@ -2214,6 +2235,8 @@ For the \gls{sfs}-based statistics, many of the windows in either the 1^st^ or 9
 
 
 #### Clustering on median-centred gene values
+
+<!-- Overall, gene lists derived from \gls{gwas} associations clustered the individual populations into their super population groupings. Windows that intersected genes that had been associated with a disease were centred by population median and then grouped using hierarchical clustering. There were varying levels of super population proportions and exclusivity (the proportion of super populations in a single cluster) of clusters (Table \@ref(tab:proportion) and \@ref(tab:exclusivity)). The Polynesian populations clustered together when using each of \gls{fwh}, \gls{td}, and \gls{ze}, and in the majority of clustering (17/20) they were exclusive. This pattern was also similar with the \gls{eas} populations (17/20). For the clusters that contained the entirety of a super population, half the groupings for the entire Polynesian super population were exclusive. Three quarters of the groupings for each of the AFR and EAS super populations were exclusive and grouped the super population in their entirety. This suggests that singletons or rare variants are insufficient in these genes to be able to differentiate between populations compared to the statistics that use the more common variants.  -->
 
 The clustering based on the median-centred values of the statistics was able to reassemble the super population groups. Again the similarity of the allele frequency spectrum based on geography appeared through urate and metabolic disease genes. Both exclusivity and proportion of populations clustered correctly was very high for nearly all populations for the four site-frequency statistics, across the metabolic disease gene lists (Tables \@ref(tab:proportion) and \@ref(tab:exclusivity)). This indicated that there was sufficient similarity between populations of a super population, and differences between super populations that the statistic values were discriminatory. However, the groups were also reassembled with the random draws of genes, with an increase in the number of completely grouped super populations when more genes were used. This showed that the particular genes themselves were not specific to the clustering but the frequency distributions in genes were different and the number of genes influenced the discrimination of populations during clustering.
 
